Fix errors in Launcher and Adaptor. CLI test now successfully deploys.